fix: layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,10 @@
     --color-base-300: oklch(0.2 0.0105 31.26);
     --color-primary: oklch(0.6225 0.2175 32.6);
 }
+
+@utility input {
+  @apply max-md:text-lg;
+}
+@utility textarea {
+  @apply max-md:text-lg;
+}
